--- a/style.css
+++ b/style.css
@@ -184,6 +184,9 @@ display: block;
   font-family: "BritannicMedium", sans-serif;
 }
 
+.Alinea-Video{
+font-size: 20px;
+}
 
 .Video{
  background-color: #033953;
